🔧 Rename runbook files to use .runbook.md extension
- Standardize file naming convention for better recognition
- Update package.json version metadata

--- a/package.json
+++ b/package.json
@@ -73,16 +73,11 @@
         "displayName": "Runbook",
         "selector": [
           {
-            "filenamePattern": "*.md"
+            "filenamePattern": "*.runbook.md"
           }
         ]
       }
     ],
-    "configurationDefaults": {
-      "workbench.editorAssociations": {
-        "*.md": "default"
-      }
-    },
     "configuration": {
       "title": "Runbook Notebook",
       "properties": {
