--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
       "request": "launch",
       "args": [
         "--extensionDevelopmentPath=${workspaceFolder}",
-        "Z:\\tmp6-vscode-ext\\runbook-example\\example-runbooks"
+        "/mnt/z/tmp6-vscode-ext/runbook-example/example-runbooks"
       ],
       "outFiles": [
         "${workspaceFolder}/src/**/*.js"
